[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/entry_param.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/radius_angle_input.gd" type="Script" id=2]

[node name="RadiusAngleInput" type="PanelContainer"]
anchor_right = 0.292969
anchor_bottom = 0.15
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 83.0

[node name="RadiusInput" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 286.0
margin_bottom = 24.0

[node name="ParamLabel" parent="VBoxContainer/RadiusInput" index="0"]
margin_top = 5.0
margin_right = 141.0
margin_bottom = 19.0
text = "Radius"

[node name="SpinBox" parent="VBoxContainer/RadiusInput" index="1"]
margin_left = 145.0
margin_right = 286.0
margin_bottom = 24.0
max_value = 300.0
step = 0.05
value = 40.0
rounded = false

[node name="AngleInput" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 286.0
margin_bottom = 52.0

[node name="ParamLabel" parent="VBoxContainer/AngleInput" index="0"]
margin_top = 5.0
margin_right = 141.0
margin_bottom = 19.0
text = "Angle in degrees"

[node name="SpinBox" parent="VBoxContainer/AngleInput" index="1"]
margin_left = 145.0
margin_right = 286.0
margin_bottom = 24.0
max_value = 360.0
step = 0.05
value = 45.0
rounded = false
suffix = "ยบ"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 286.0
margin_bottom = 76.0
text = "Color"

[editable path="VBoxContainer/RadiusInput"]
[editable path="VBoxContainer/AngleInput"]
